# universal-flasher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  FORWARD-PLAN.md  GUIDE.md  README.md  SECURITY.md  build.py  install.bat  install.sh  pyproject.toml  requirements.txt  run-gui.bat  run-gui.sh  run-qt.bat  run-qt.sh  run-tui.bat  run-tui.sh  run-web.bat  run-web.sh  uninstall.bat  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: build-release.yml  ci.yml  update-os-catalog.yml
gui/: __init__.py  app.py  flasher_window.py
gui_qt/: __init__.py  app.py  software_tab.py
scripts/: update_os_catalog.py
suicide/: __init__.py  host_requirements.txt  nvs_config.csv.template  provision.py
suicide/docs/: ARCHITECTURE.md  HARDWARE-TEST.md  HARDWARE.md  LICENSING.md  PROVISIONING.md  RESEARCH-DIGEST.md  SAFETY.md  SPEC.md  SPIKE-PLAN.md  THREAT-MODEL.md
suicide/firmware/bootgate/: ArmingSwitch.cpp  ArmingSwitch.h  BootGate.cpp  BootGate.h  GateConfig.cpp  GateConfig.h  GateCrypto.cpp  GateCrypto.h  GateInput.h  (+7 more)
suicide/partitions/: README.md  suicide_16MB.csv  suicide_4MB.csv  suicide_8MB.csv  suicide_guardian_16MB.csv
suicide/scripts/: build.ps1  build.sh  build_test_harness.ps1  build_test_harness.sh
tests/: test_adb_backend.py  test_backup_and_detect.py  test_bundle_offset_validation.py  test_controllers_capture.py  test_fix_uf_s1_suicide_nul_bounds.py  test_flash_offsets.py  test_flasher_robustness.py  test_gui_hardening.py  test_os_catalog.py  test_parsing_race.py  test_restore_integrity.py  test_sd_backend.py  test_security_guards.py  test_software_tab.py  test_suicide_provision.py  test_uf4b_robustness.py  test_uf_deep_audit1_batch.py  test_uf_deep_audit1_ship2.py  test_uihelp_headless.py  test_version.py  test_web_auth.py  test_web_cors.py  test_web_flash_guard.py
tui/: __init__.py  app.py
uf_core/: __init__.py  adb_backend.py  backup.py  batch.py  cache.py  capture.py  commands.py  controller.py  controllers.py  device_detect.py  flasher.py  health.py  history.py  os_catalog.json  os_catalog.py  parsing.py  plugins.py  sd_backend.py  uihelp.py  update_checker.py  updater.py
web/: app.py
web/templates/: index.html
(+7 files in other folders)
