[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-flasher"
version = "1.0.0"
description = "Multi-firmware flasher and device manager for ESP32, Raspberry Pi, Flipper Zero, and ADB-based security hardware"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "LxveAce"}]
keywords = [
    "esp32", "marauder", "ghostesp", "bruce", "meshtastic", "halehound",
    "pwnagotchi", "rayhunter", "flipper", "cyberdeck",
    "flasher", "firmware", "serial", "security", "wifi", "bluetooth", "lora",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Hardware",
]
dependencies = [
    "pyserial>=3.5",
    "esptool>=4.7,<6",
    "requests>=2.28",
    "psutil>=5.9",
]

[project.optional-dependencies]
qt = ["PyQt5>=5.15"]
tui = ["textual>=0.50"]
web = ["flask>=3.0", "flask-socketio>=5.3"]
all = ["PyQt5>=5.15", "textual>=0.50", "flask>=3.0", "flask-socketio>=5.3"]

[project.urls]
Homepage = "https://github.com/LxveAce/universal-flasher"
Repository = "https://github.com/LxveAce/universal-flasher"
Issues = "https://github.com/LxveAce/universal-flasher/issues"

[project.scripts]
universal-flasher-qt = "gui_qt.app:main"
universal-flasher-tk = "gui.app:main"
universal-flasher-tui = "tui.app:main"
universal-flasher-web = "web.app:main"

[tool.setuptools.packages.find]
include = ["uf_core*", "gui*", "gui_qt*", "tui*", "web*", "suicide*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.svg", "*.json"]
